# Neural-Network-Sim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.txt  requirements.txt  suivpn.md  temp_config.ini
config/: default_config.ini
include/: neural_sim.h
output/: network_state_0.000.txt  network_state_0.001.txt  network_state_0.002.txt  network_state_0.003.txt  network_state_0.004.txt  network_state_0.005.txt  network_state_0.006.txt  network_state_0.007.txt  network_state_0.008.txt  network_state_0.009.txt  network_state_0.010.txt  network_state_0.011.txt  network_state_0.012.txt  network_state_0.013.txt  network_state_0.014.txt  network_state_0.015.txt  network_state_0.016.txt  network_state_0.017.txt  network_state_0.018.txt  network_state_0.019.txt  network_state_0.020.txt  network_state_0.021.txt  network_state_0.022.txt  network_state_0.023.txt  network_state_0.024.txt  network_state_0.025.txt  network_state_0.026.txt  network_state_0.027.txt  network_state_0.028.txt  network_state_0.029.txt  network_state_0.030.txt  network_state_0.031.txt  network_state_0.032.txt  network_state_0.033.txt  network_state_0.034.txt  network_state_0.035.txt  network_state_0.036.txt  network_state_0.037.txt  network_state_0.038.txt  network_state_0.039.txt  (+25910 more)
src/: main.c
src/core/: dendrite.c  dendrite.h  network.c  network.h  neuron.c  neuron.h  synapse.c  synapse.h
src/mechanisms/: homeostasis.c  homeostasis.h  neuromodulation.c  neuromodulation.h  plasticity.c  plasticity.h
src/utils/: config.c  config.h  logger.c  logger.h  random.c  random.h
tests/: test_dendrite.c  test_network.c  test_plasticity.c  test_utils.c
web/: app.py  temp_config.ini
web/static/: script.js  style.css
web/templates/: index.html
